Fixed items display on IE9/10/11

--- a/gk-nsp/article_wrappers/highlighter/highlighter.less
+++ b/gk-nsp/article_wrappers/highlighter/highlighter.less
@@ -50,6 +50,7 @@
                 height: 55px;
                 line-height: 55px;
                 opacity: 0;
+                position: relative;
                 -webkit-transition: all .3s ease-out;
                 -moz-transition: all .3s ease-out;
                 -ms-transition: all .3s ease-out;
@@ -60,6 +61,7 @@
                     display: block;
                     height: 55px;
                     overflow: hidden;
+                    position: absolute;
                 }
 
                 &.active {
